# dv-eda

./: .gitignore  app.py  options.py  pyproject.toml  requirements.txt  settings.py
assets/: custom-styles.css
data/: gics_list.csv  historical_prices_etf.csv  meta.csv
