[tool.poetry]
name = "dv-eda"
version = "0.1.0"
description = ""
authors = ["jay-ylee <bizljy0527@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "~1.26.3"
pandas = "~2.1.2"
tqdm = "^4.66.4"
matplotlib = "^3.8.4"
plotly = "^5.22.0"
dash = "^2.16.1"
nbformat = "^5.10.4"
openpyxl = "^3.1.2"
gunicorn = "^22.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
